--- a/trailr/app/views/home/index.html.erb
+++ b/trailr/app/views/home/index.html.erb
@@ -25,16 +25,16 @@
 <fieldset>
 	<div class="small_columns">
 		<div class="maincol">
-			<div style="float:left;width:600px;height:230px;border:0px solid #808080"> 
-				<iframe frameborder="0" width="600" height="230" src="/embed/3"></iframe> 
+			<div style="float:left;width:600px;height:235px;border:0px solid #808080"> 
+				<iframe frameborder="0" width="600" height="235" src="/embed/3"></iframe> 
 			</div> 
-			<div style="float:left; width:600px; height:230px;border:0px solid #808080"> 
-				<iframe frameborder="0" width="600" height="230" src="/embed/1"></iframe> 
+			<div style="float:left; width:600px; height:235px;border:0px solid #808080"> 
+				<iframe frameborder="0" width="600" height="235" src="/embed/1"></iframe> 
 			</div> 			
 		</div>
 		<div class="sidecol">
 			<div class="round_box" style="margin-top:15px">
-				<h3>What is linehive?</h3>
+				<h3>What is LineHive?</h3>
 				<b>Create</b> a timeline by pasting links.<br>
 				<b>Share</b> the URL with others; <b>embed</b> it anywhere.<br>
 				<b>Crowdsource</b> news exploration.<br><br>
@@ -42,7 +42,7 @@
 				<h3>What's new?</h3>
 				<b>Date time editing</b> for timeline creation.<br>
 				<b>Jetpack</b> authoring extension for firefox.<br>
-				Follow us on <b>Twitter</b>.<br><br>
+				Follow us on <b><a href="http://twitter.com/linehive">Twitter</a></b>.<br><br>
 				
 				<h3>To come?</h3>
 				<b>Search</b> by topics.<br>
