Added timelines to front page

--- a/trailr/app/views/home/index.html.erb
+++ b/trailr/app/views/home/index.html.erb
@@ -20,11 +20,29 @@
 
 
 
-<h2>Popular Timelines <span style="font-size:12px; font-weight:normal">
+<h2>Popular Timelines</h2>
 <div class="space_10"></div>
 <fieldset>
 	<div class="small_columns">
 		<div class="maincol">
+			<div style="float:left;width:600px;height:235px;border:0px solid #808080"> 
+	<iframe frameborder="0" width="600" height="235" src="http://linehive.com/embed/51</iframe> 
+</div> 
+<div style="float:left;width:600px;height:235px;border:0px solid #808080"> 
+	<iframe frameborder="0" width="600" height="235" src="http://linehive.com/embed/52</iframe> 
+</div> 
+<div style="float:left;width:600px;height:235px;border:0px solid #808080"> 
+	<iframe frameborder="0" width="600" height="235" src="http://linehive.com/embed/53</iframe> 
+</div> 
+<div style="float:left;width:600px;height:235px;border:0px solid #808080"> 
+	<iframe frameborder="0" width="600" height="235" src="http://linehive.com/embed/54</iframe> 
+</div> 
+<div style="float:left;width:600px;height:235px;border:0px solid #808080"> 
+	<iframe frameborder="0" width="600" height="235" src="http://linehive.com/embed/55</iframe> 
+</div> 
+<div style="float:left;width:600px;height:235px;border:0px solid #808080"> 
+	<iframe frameborder="0" width="600" height="235" src="http://linehive.com/embed/56</iframe> 
+</div> 
 			<div style="float:left;width:600px;height:235px;border:0px solid #808080"> 
 				<iframe frameborder="0" width="600" height="235" src="/embed/3"></iframe> 
 			</div> 
