--- a/trailr/app/views/home/index.html.erb
+++ b/trailr/app/views/home/index.html.erb
@@ -53,9 +53,9 @@
 		<div class="sidecol">
 			<div class="round_box" style="margin-top:15px">
 				<h3>What is LineHive?</h3>
-				<b>Create</b> a timeline by pasting links.<br>
-				<b>Share</b> the URL with others; <b>embed</b> it anywhere.<br>
-				<b>Crowdsource</b> news exploration.<br><br>
+				<b>Lightweight timelines</b> anytime, anywhere, about anything.<br>
+				<b>Create</b> a timeline by just pasting links.<br>
+				<b>Share</b> a timeline's URL , <b>embed</b> it anywhere.<br><br>
 				
 				<h3>What's new?</h3>
 				<b>Date time editing</b> for timeline creation.<br>
