--- a/trailr/app/views/home/team.html.erb
+++ b/trailr/app/views/home/team.html.erb
@@ -4,7 +4,7 @@
 
 <h2>The LineHive Team</h2>
 
-<p>We are a mix of undergrad &amp; graduate students, and visiting researchers at Stanford University.</p>
+<p>We are a mix of undergrad &amp; graduate students, and visiting scholars at Stanford University.</p>
 
 <ul>
 <li><a href="http://moraveji.org">Neema Moraveji</a>
