--- a/trailr/app/views/trails/new.html.erb
+++ b/trailr/app/views/trails/new.html.erb
@@ -1,5 +1,5 @@
 <% content_for :title do %>
-	LineHive: Create Timeline
+	LineHive: Create a timeline
 <% end %>
 
 <% content_for :stylesheets do %>
