--- a/trailr/app/views/trails/new.html.erb
+++ b/trailr/app/views/trails/new.html.erb
@@ -293,11 +293,12 @@
 	</div>
 	<div class="meta_callout">&nbsp;</div>
 	
+	<div class="events">
+		<div class="empty">
+			No Events
+		</div>			
+	</div>
 	
-	<div class="empty">
-		No Events
-	</div>			
-
 	<div id="scale">&nbsp;</div>
 </div>
 
