--- a/trailr/public/stylesheets/timeline.css
+++ b/trailr/public/stylesheets/timeline.css
@@ -73,16 +73,6 @@
 	border:0px solid green;
 }
 
-#timeline .cluster {
-	text-align:center;
-	position:absolute;
-	
-	width:150px;
-	height:150px;
-
-	border:1px solid red;
-	
-}
 
 #timeline .meta_callout {
 	
@@ -316,6 +306,23 @@
 }
 
 
+
+#timeline .cluster {
+	text-align:center;
+	position:absolute;
+	
+	width:150px;
+	height:150px;
+
+	border:0px solid red;
+	
+}
+
+#timeline .cluster img{
+	position:absolute;
+	left:2px;
+	
+}
 
 
 
