--- a/trailr/app/views/trails/show.html.erb
+++ b/trailr/app/views/trails/show.html.erb
@@ -42,6 +42,8 @@
 <div style="margin-top:50px;margin-bottom:35px">
 	<div id="timeline" class="noedit">
 	
+		<div class="back">Back</div>
+	
 		<div class="meta">
 			<div class="headline">
 				&nbsp;
