--- a/trailr/public/stylesheets/timeline.css
+++ b/trailr/public/stylesheets/timeline.css
@@ -222,7 +222,7 @@
 	
 	text-align:center;
 	font-family:Helvetica, Arial, Sans-Serif;
-	font-size:12px;
+	font-size:11px;
 }
 
 
@@ -352,6 +352,33 @@
     border-style: solid;
 }
 */
+
+#timeline .back {
+	
+	text-align:center;
+	font-size:13px;
+	color:white;
+	height:30px;
+	width:92px;
+	
+
+	line-height:27px;
+	padding-left:5px;
+	
+	background:none;
+	background-image:url("../images/back.png");
+	background-repeat: no-repeat;
+	
+	position:absolute;
+	left:8px;
+	top:8px;
+	z-index:150;
+
+	cursor:pointer;
+	display:none;
+	
+}
+
 
 #timeline .close {
 	
