--- a/trailr/app/views/trails/show.html.erb
+++ b/trailr/app/views/trails/show.html.erb
@@ -66,14 +66,15 @@
 	</div>
 </div>
 <form name="inputs">
-<div id="urlbox">
-	<input name="url" value="http://www.linehive.com/show/<%= @trail.id %>" onclick="javascript:document.inputs.url.focus();document.inputs.url.select();" style="width:500px; float:right;">
-	<span style="float:right;margin-right:5px; text-weight:bold">URL</span>
+<div id="urlbox" style="float:right">
+	<span style="margin-right:5px; text-weight:bold">URL</span>
+	<input name="url" value="<%= url_for :controller => "trails", :action => "show", :id => @trail.id, :only_path => false %>" onclick="javascript:document.inputs.url.focus();document.inputs.url.select();" style="width:350px;">
 </div>
 <div id="embedbox">
-	<input name="embed" value='<iframe frameborder="0" width="600" height="235" style="float:left;width:600px;height:230px;border:0px solid #808080" src="http://linehive.com/embed/<%= @trail.id %>"></iframe>' 
-	style="width:500px; float:right;" onclick="javascript:document.inputs.embed.focus();document.inputs.embed.select();">
-	<span style="float:right; margin-right:5px; text-weight:bold">Embed</span>
+	<span style="margin-right:5px; text-weight:bold">Embed</span>
+	
+	<input name="embed" value='<iframe frameborder="0" width="600" height="235" style="width:600px;height:235px;border:0px solid #808080" src="<%= url_for :controller => "trails", :action => "show", :id => @trail.id, :only_path => false %>"></iframe>' 
+	style="width:350px;" onclick="javascript:document.inputs.embed.focus();document.inputs.embed.select();">
 </div>
 </form>
 <div class="clear">
