Minor ui changes, there is a conflict on index.html.erb

--- a/trailr/app/views/home/index.html.erb
+++ b/trailr/app/views/home/index.html.erb
@@ -55,17 +55,12 @@
 				<h3>What is LineHive?</h3>
 				<b>Lightweight timelines</b> anytime, anywhere, about anything.<br>
 				<b>Create</b> a timeline by just pasting links.<br>
-				<b>Share</b> a timeline's URL , <b>embed</b> it anywhere.<br><br>
+				<b>Share</b> a timeline's URL, <b>embed</b> it anywhere.<br><br>
 				
 				<h3>What's new?</h3>
-				<b>Date time editing</b> for timeline creation.<br>
 				<b>Jetpack</b> authoring extension for firefox.<br>
-				Follow us on <b><a href="http://twitter.com/linehive">Twitter</a></b>.<br><br>
+				<b>Follow</b> us on <b><a href="http://twitter.com/linehive">Twitter</a></b>.<br><br>
 				
-				<h3>To come?</h3>
-				<b>Search</b> by topics.<br>
-				<b>Comment</b> on any timeline.<br>
-				<b>API</b> for development clients.<br>
 			</div>
 		</div>
 		<div class="clear"></div>
