--- a/trailr/app/views/layouts/application.html.erb
+++ b/trailr/app/views/layouts/application.html.erb
@@ -70,7 +70,7 @@
 							-->
 
 							<ul>
-								<li><%= link_to "Create Timeline", :controller => "trails", :action => "new" %></li>
+								<li><%= link_to "Create New Timeline", :controller => "trails", :action => "new" %></li>
 								<!--<li><%# link_to "Explore", :controller => "home", :action => "explore" %></li>-->
 							</ul>
 							<div class="clear"></div>
