Temp disabled clustering in the authoring page.

--- a/trailr/app/views/trails/new.html.erb
+++ b/trailr/app/views/trails/new.html.erb
@@ -110,6 +110,8 @@
 
 	$(function() {
 		
+		timeline.use_clustering = false;
+		
 		<% if @articles %>
 			timeline.init(<%= @articles.to_json %>);
 		<% else %>
