--- a/trailr/app/views/trails/show.html.erb
+++ b/trailr/app/views/trails/show.html.erb
@@ -13,6 +13,9 @@
 <% content_for :javascripts do %>
 	<%= javascript_include_tag "timeline.js" %>
 	<%= javascript_include_tag "jquery.ui.datepicker.js" %>
+	<%= javascript_include_tag "jquery.easing.1.3.js" %>
+
+
 	
 	
 	
