Moved the timeline into a partial

--- a/trailr/app/views/trails/new.html.erb
+++ b/trailr/app/views/trails/new.html.erb
@@ -17,6 +17,8 @@
 
 <%= javascript_include_tag "timeline.js" %>
 <%= javascript_include_tag "jquery.ui.datepicker.js" %>
+<%= javascript_include_tag "jquery.easing.1.3.js" %>
+
 
 
 
@@ -232,52 +234,7 @@
 </fieldset>
 
 
-<div id="timeline">
-	
-	<div id="image_picker_cover">
-		&nbsp;
-	</div>	
-	
-	<div id="image_picker">
-		<div class="close"></div>
-		<h3>
-			Site Images<span style="font-weight:normal"> - From <span class="source">www.cnn.com</span></span>
-		</h3>
-		<ul></ul>
-		<div class="clear">&nbsp;</div>		
-		<div style="border-bottom:1px solid black;text-align:center; margin-bottom:14px">
-			<span style="position:relative;top:7px;background-color:#F5F5F5;padding:0px 5px">Or</span>
-		</div>
-		<h3>
-			Custom Image<span style="font-weight:normal"> - Use any image URL</span>
-		</h3>
-		<div style="padding:0px 15px">
-			<input type="button" name="some_name" value="Choose" style="float:right" class="trail_button pick_custom_image_button">		
-			<input type="text" name="some_name" value="" style="width:420px" class="large_text pick_custom_image_text">
-		</div>
-	</div>
-	
-	<div class="back">Back</div>
-
-	<div class="meta">
-		<div class="headline">
-			&nbsp;
-		</div>
-		<div class="source">
-			&nbsp;
-		</div>
-	</div>
-	<div class="meta_callout">&nbsp;</div>
-	
-	<div class="events">
-		<div class="empty">
-			No Events
-		</div>			
-	</div>
-	
-	<div id="scale">&nbsp;</div>
-</div>
-
+<%= render :partial => "timeline", :locals => { :noedit => false } %>
 
 <div id="buttons">
 				
