--- a/trailr/app/views/trails/embed.html.erb
+++ b/trailr/app/views/trails/embed.html.erb
@@ -37,28 +37,9 @@
 	<% url = url_for :controller => "trails", :action => "show", :id => @trail.id, :only_path => false %>
 	<a href="<%= url %>" onclick="window.open('<%= url %>'); return false;" target="_blank"><h3 id="caption"><%= @trail.caption %></h3></a>
 	<div style="">
-		<div id="timeline" class="noedit">
 
-			<div class="back">Back</div>
+	<%= render :partial => "timeline", :locals => { :noedit => true } %>
 
-			<div class="meta">
-				<div class="headline">
-					&nbsp;
-				</div>
-				<div class="source">
-					&nbsp;
-				</div>
-			</div>
-			<div class="meta_callout">&nbsp;</div>
-	
-			<div class="events">
-				<div class="empty">
-					No Events
-				</div>			
-			</div>
-
-			<div id="scale">&nbsp;</div>
-		</div>
 	</div>
 	
 </body>
