Moved the template into the dom to make editing easier. This is a safety commit - the old code has not been removed yet

--- a/trailr/app/views/trails/embed.html.erb
+++ b/trailr/app/views/trails/embed.html.erb
@@ -2,8 +2,10 @@
 <%= stylesheet_link_tag "timeline" %>			
 
 <%= default_javascript %>
+
 <%= javascript_include_tag "timeline.js" %>
 <%= javascript_include_tag "jquery.autoellipsis.js" %>
+<%= javascript_include_tag "jquery.create.js" %>
 
 		
 <script type="text/javascript" charset="utf-8">
