--- a/trailr/app/views/trails/_timeline.html.erb
+++ b/trailr/app/views/trails/_timeline.html.erb
@@ -1,4 +1,6 @@
 
+
+
 <% if noedit %>
 	<div id="timeline" class="noedit">
 <% else  %>
@@ -50,4 +52,43 @@
 	<div id="scale">&nbsp;</div>
 </div>
 
+
+<pre id="add" class="template">
+	<div class="$class">					 
+		<div class="insert"></div> 
+		<div class="info">				 
+			<div class="pictures">	 
+					$pictures
+			</div>									 
+			<div class="headline">   
+					$headline
+			</div>                   
+			<div class="url">        
+				$url
+			</div>                   
+			<div class="source">     
+				$source
+			</div>                   
+			<div class="image">      
+				$image
+			</div>                   
+			<div class="date">       
+				$date
+			</div>                   
+		</div>                     
+		<div class="thumbnail">
+			<a href="$url" onclick="window.open(\'$url\'); return false;" target="_blank">
+				<img src="$image">
+			</a>
+			<span class="pick_image">Change Image</span>
+		</div>
+		<div class="tick">
+			&nbsp;					        
+		</div>
+		<div class="date">
+			<div class="close">[<a href="#">x</a>]</div>
+			$format
+		</div>
+	</div>
+</pre>
 
