--- a/trailr/app/views/trails/new.html.erb
+++ b/trailr/app/views/trails/new.html.erb
@@ -18,6 +18,7 @@
 <%= javascript_include_tag "timeline.js" %>
 <%= javascript_include_tag "jquery.ui.datepicker.js" %>
 <%= javascript_include_tag "jquery.easing.1.3.js" %>
+<%= javascript_include_tag "jquery.create.js" %>
 
 
 
