--- a/trailr/app/views/trails/show.html.erb
+++ b/trailr/app/views/trails/show.html.erb
@@ -11,10 +11,11 @@
 <% end %>
 
 <% content_for :javascripts do %>
+	
 	<%= javascript_include_tag "timeline.js" %>
 	<%= javascript_include_tag "jquery.ui.datepicker.js" %>
 	<%= javascript_include_tag "jquery.easing.1.3.js" %>
-
+	<%= javascript_include_tag "jquery.create.js" %>
 
 	
 	
