--- a/trailr/public/stylesheets/timeline.css
+++ b/trailr/public/stylesheets/timeline.css
@@ -5,7 +5,7 @@
 	background-color:#F5F5F5;
 	
 	padding:0px 0px;
-	height:150px;
+	height:200px;
 
 	-webkit-border-radius:5px;
 	-moz-border-radius:5px;
@@ -27,6 +27,7 @@
 	position:relative;
 	height:166px;
 	height:165px;	
+	height:217px;	
 	
 	overflow:auto;
 	overflow-y:hidden;
@@ -68,7 +69,7 @@
 	position:absolute;
 	
 	width:150px;
-	height:150px;
+	height:200px;
 
 	border:0px solid green;
 }
@@ -194,7 +195,7 @@
 	position:relative;
 	width:100%;
 	
-	height:110px;
+	height:103px;
 	margin:auto;
 	z-index:0;
 }
@@ -205,7 +206,7 @@
 	z-index:0;
 	
 	position:absolute;
-	bottom:15px;
+	bottom:73px;
 	
 	width:50%;
 	border-right:2px solid black;
@@ -218,7 +219,7 @@
 	
 	position:absolute;
 	width:100%;
-	bottom:3px;
+	bottom:65px;
 	
 	text-align:center;
 	font-family:Helvetica, Arial, Sans-Serif;
@@ -340,7 +341,7 @@
 #timeline #scale {
 	border-bottom:2px solid black;
 	position:absolute;
-	bottom:30px;
+	bottom:90px;
 	width:100%;
 }
 
@@ -483,4 +484,8 @@
 	margin-bottom:15px;
 }
 
+
+.template {
+	display:none;
+}
 
