Added elipsis to the overflow headline. Updated the animation and made a prettier date on the show page

--- a/trailr/app/views/trails/_timeline.html.erb
+++ b/trailr/app/views/trails/_timeline.html.erb
@@ -89,6 +89,9 @@
 			<div class="close">[<a href="#">x</a>]</div>
 			$format
 		</div>
+		<div class="headline">
+			$headline
+		</div>
 	</div>
 </pre>
 
