--- a/trailr/app/views/trails/new.html.erb
+++ b/trailr/app/views/trails/new.html.erb
@@ -19,7 +19,7 @@
 <%= javascript_include_tag "jquery.ui.datepicker.js" %>
 <%= javascript_include_tag "jquery.easing.1.3.js" %>
 <%= javascript_include_tag "jquery.create.js" %>
-
+<%= javascript_include_tag "jquery.autoellipsis.js" %>
 
 
 
