--- a/trailr/app/views/trails/show.html.erb
+++ b/trailr/app/views/trails/show.html.erb
@@ -12,10 +12,11 @@
 
 <% content_for :javascripts do %>
 	
-	<%= javascript_include_tag "timeline.js" %>
-	<%= javascript_include_tag "jquery.ui.datepicker.js" %>
-	<%= javascript_include_tag "jquery.easing.1.3.js" %>
-	<%= javascript_include_tag "jquery.create.js" %>
+<%= javascript_include_tag "timeline.js" %>
+<%= javascript_include_tag "jquery.ui.datepicker.js" %>
+<%= javascript_include_tag "jquery.easing.1.3.js" %>
+<%= javascript_include_tag "jquery.autoellipsis.js" %>
+<%= javascript_include_tag "jquery.create.js" %>
 
 	
 	
@@ -38,7 +39,7 @@
 	
 	<h2><%= @trail.caption %></h2>
 	<div id="trail_subheading">
-		Created on <b><%= @trail.created_at %></b>
+		Created on <b><%= @trail.created_at.strftime("%B %d, %Y at %I:%M%p") %></b>
 	</div>
 	
 </div>
