--- a/trailr/public/stylesheets/timeline.css
+++ b/trailr/public/stylesheets/timeline.css
@@ -215,7 +215,20 @@
 	margin-bottom:6px;
 }
 
+
+#timeline .event .headline {
+	position:absolute;
+	width:100%;
+	bottom:0px;
+	height:60px;
+	
+	text-align:center;
+	font-family:Helvetica, Arial, Sans-Serif;
+	font-size:11px;
+}
+
 #timeline .date {
+	font-weight:bold;
 	
 	position:absolute;
 	width:100%;
@@ -236,8 +249,11 @@
 	border-bottom:1px solid #CCC;
 	padding:2px 0px 2px 0px;
 	
+	position:relative;
+	top:3px;
+	
 	background-color:transparent;
-	font-size:12px;
+	font-size:11px;
 
 	text-align:center;
 	width:110px;
@@ -251,15 +267,7 @@
 #timeline .date .date_edit:focus {
 	border:1px solid #CCC;
 	background-color:white;
-	font-size:12px;
-	padding:2px 0px 2px 0px;
-	font-family:Helvetica, Arial, Sans-Serif;
-}
-
-#timeline .date .date_edit:hover {
-	border:1px solid #CCC;
-	background-color:white;
-	font-size:12px;
+	
 	padding:2px 0px 2px 0px;
 	font-family:Helvetica, Arial, Sans-Serif;
 }
@@ -268,7 +276,7 @@
 #timeline .date .date_edit:hover {
 	border:1px solid #CCC;
 	background-color:white;
-	font-size:12px;
+
 	padding:2px 0px;
 	font-family:Helvetica, Arial, Sans-Serif;
 }
@@ -386,13 +394,12 @@
 	font-size:11px;
 	position:absolute;
 	left:0px;
-	bottom:-8px;
+	bottom:-12px;
 	z-index:50;
 	height:26px;
 	width:26px;
 	background-color:none;
 	cursor:pointer;
-	//background-image:url("../images/close.png");
 	
 }
 
