Added horizontal scrolling to the timeline

--- a/trailr/app/views/trails/embed.html.erb
+++ b/trailr/app/views/trails/embed.html.erb
@@ -7,6 +7,7 @@
 <%= javascript_include_tag "jquery.autoellipsis.js" %>
 <%= javascript_include_tag "jquery.create.js" %>
 <%= javascript_include_tag "jquery.easing.1.3.js" %>
+<%= javascript_include_tag "jquery.mousewheel.js" %>
 
 		
 <script type="text/javascript" charset="utf-8">
