A bunch of bug fixes

--- a/trailr/app/views/trails/new.html.erb
+++ b/trailr/app/views/trails/new.html.erb
@@ -241,7 +241,7 @@
 <div id="buttons">
 				
 		<% form_tag({:controller => "trails", :action => "create" }, {:id => "post_back"})  do %>
-			<%= submit_tag "Create", { :class => "trail_button"} %>
+			<%= submit_tag "Publish", { :class => "trail_button"} %>
 			<input type="hidden" name="trail" value="" id="trail_input"> 
 		<% end %>
 	
