--- a/trailr/app/views/trails/embed.html.erb
+++ b/trailr/app/views/trails/embed.html.erb
@@ -18,6 +18,7 @@
 
 	$(function() {
 		$("#caption").autoEllipsis();
+		timeline.show_meta = false;
 		timeline.init(<%= @articles.to_json %>);
 		
 	});
