--- a/trailr/public/stylesheets/layout.css
+++ b/trailr/public/stylesheets/layout.css
@@ -22,6 +22,12 @@
 	height:100px;
 }
 
+#header_wrapper .header_right{
+	float:right;
+	margin-top:-48px;
+	color:white;
+}
+
 #logo {
 	
 	position:relative;
