--- a/trailr/app/views/user/account.html.erb
+++ b/trailr/app/views/user/account.html.erb
@@ -2,20 +2,23 @@
 	LineHive: Your Account
 <% end %>
 
-<div class="account" style="overflow:hidden;">
-	
+<% content_for :stylesheets do %>	
+	<%= stylesheet_link_tag "form" %>	
+	<%= stylesheet_link_tag "account" %>	
+<% end %>
 
-	<div class="right" style="margin-bottom:-2000px;padding-bottom:2000px;">
+
+<div class="account" style="overflow:hidden;">	
+
+	<div class="right" style="margin-bottom:-2000px;padding-bottom:2000px;height=200px">
 		<h1>Timelines</h1>
 		See more...
+		<br><br><br><br>
 	</div>
-
+	
+	<% if current_user %>
 	<div class="left" style="margin-bottom:-2000px;padding-bottom:2000px">
-		<h1>
-			
-			
-			<b><%= text_field :user, :handle %></b> Account Information
-		</h1>
+		<h1>Account Information</h1>
 				
 		<h3>General Information</h3>
 		
@@ -23,14 +26,14 @@
 			
 			<fieldset>	
 			<p>
-				<label>First Name</label>
-				<%= text_field :customer, :first_name %>
+				<label>Handle</label>
+				<%= text_field :user, :handle %>
 				<span class="clear"></span>
 			</p>
 
 			<p>
-				<label>Last Name</label>
-				<%= text_field :customer, :last_name %>
+				<label>Email</label>
+				<%= text_field :user, :email %>
 				<span class="clear"></span>
 			</p>
 
@@ -60,59 +63,12 @@
 			
 				
 		<% end %>
-		
-		<h3>Contact Informations</h3>
-		
-		<% count = 0 %>
-		<% for @contact_info in @customer.contact_infos %>
-			<% count += 1 %>
-			
-			<% form_tag :controller => :contact_info, :action => :process_edit, :id => @contact_info.id do %>
-				<span class="number"><%= count %></span>
-				<fieldset>
-					<%= render :partial => "partials/contact_info_form" %>
-					<div class="input">
-						<%= submit_tag "Save Changes" %> 
-						<%= ll_button_to "Remove", {:controller => :contact_info, :action => :remove, :id => @contact_info.id} %>
-					</div>
-				</fieldset>
-			<% end %>
-		<% end %>
-		
-		<% if count == 0 %>
-			<p>No contact information on file. Feel free to add one. <%= link_to "Add Contact Information", :controller => 'contact_info', :action => 'add' %></p>
-		<% end %>
-		
-		
-		<h3>Credit Cards</h3>
-		
-		<% count = 0 %>
-		<% for @credit_card in @customer.credit_cards %>
-			<% count += 1 %>
-		
-			<% form_tag :controller => :card, :action => :process_edit, :id => @credit_card.id do %>
-				<span class="number"><%= count %></span>
-				<fieldset>				
-					<%= render :partial => "partials/credit_card_form" %>
-					
-					<div class="input">
-						<%= submit_tag "Save Changes" %> 
-						<%= ll_button_to "Remove", {:controller => :card, :action => :remove, :id => @credit_card.id} %>
-					</div>
-					
-				</fieldset>
-			<% end %>
-		
-		<% end %>
-		
-		<% if count == 0 %>
-			<p>No credit card on file. Feel free to add one. <%= link_to "Add Credit Card", :controller => 'card', :action => 'add' %></p>
-		<% end %>
-	</div>
 
+	</div>
+	<% end %>
 	<div class="clear">
 		&nbsp;
 	</div>
-
+	
 </div>
 
