Several bug fixes and also added the character limit on the timeline titles.

--- a/trailr/app/views/home/team.html.erb
+++ b/trailr/app/views/home/team.html.erb
@@ -7,12 +7,13 @@
 <p>We are a mix of undergrad &amp; graduate students, and visiting scholars at Stanford University.</p>
 
 <ul>
-<li><a href="http://moraveji.org">Neema Moraveji</a>
-<li><a href="http://salmanahmad.com/">Salman Ahmad</a> 
-<li><a href="http://frankc.net/">Frank Chen</a> 
-<li><a href="http://www.res.kutc.kansai-u.ac.jp/~ckita/bio.html">Chigusa Kita</a>
-<li><a href="http://www.shervin.com/">Shervin Pishevar</a> (advisor)
-<li><a href="http://www.kamvar.org/">Sep Kamvar</a> (advisor)
-<li><a href="http://www.stanford.edu/~roypea/">Roy Pea</a> (advisor)
-<li><a href="http://hci.stanford.edu/jheer/">Jeff Heer</a> (advisor)
+	<li><a href="http://moraveji.org">Neema Moraveji</a></li>
+	<li><a href="http://salmanahmad.com/">Salman Ahmad</a></li>
+	<li><a href="http://frankc.net/">Frank Chen</a></li>
+	<li><a href="http://www.res.kutc.kansai-u.ac.jp/~ckita/bio.html">Chigusa Kita</a></li>
+	<li><a href="http://www.shervin.com/">Shervin Pishevar</a> (advisor)</li>
+	<li><a href="http://www.kamvar.org/">Sep Kamvar</a> (advisor)</li>
+	<li><a href="http://www.stanford.edu/~roypea/">Roy Pea</a> (advisor)</li>
+	<li><a href="http://hci.stanford.edu/jheer/">Jeff Heer</a> (advisor)</li>
+	<li><a href="http://www.amidzad.com/pejman.htm">Pejman Nozad</a> (advisor)</li>
 </ul>
