--- a/trailr/app/views/trails/show.html.erb
+++ b/trailr/app/views/trails/show.html.erb
@@ -41,6 +41,7 @@
 	<h2><%= @trail.caption %></h2>
 	<div id="trail_subheading">
 		Created on <b><%= @trail.created_at.strftime("%B %d, %Y at %I:%M%p") %></b>
+		&nbsp; | &nbsp; Views <b><%= @trail.viewcount %></b>
 	</div>
 	
 </div>
