Fixed a bug with image template forcing a callback to the server

--- a/trailr/app/views/trails/_timeline.html.erb
+++ b/trailr/app/views/trails/_timeline.html.erb
@@ -78,7 +78,7 @@
 		</div>                     
 		<div class="thumbnail">
 			<a href="$url" onclick="window.open(\'$url\'); return false;" target="_blank">
-				<img src="$image">
+				$image
 			</a>
 			<span class="pick_image">Change Image</span>
 		</div>
