--- a/trailr/app/views/trails/new.html.erb
+++ b/trailr/app/views/trails/new.html.erb
@@ -97,7 +97,7 @@
 	$(function() {
 		
 		
-		$("#top_links").hide();
+		$("#create_timeline_link").hide();
 		
 		timeline.use_clustering = false;
 		
