--- a/trailr/app/views/search/results.html.erb
+++ b/trailr/app/views/search/results.html.erb
@@ -1,3 +1,15 @@
+<% content_for :title do %>
+	Search Results - <%= params[:query] %>
+<% end %>
+
 <h2>
 	Search Results: <%= params[:query] %>
 </h2>
+
+<ul>
+	<% for trail in @trails %>
+	<li>
+		<%= link_to trail.caption, :controller => "trails", :action => "show", :id => trail.id  %>
+	</li>
+	<% end %>
+</ul>
