--- a/trailr/public/stylesheets/signon.css
+++ b/trailr/public/stylesheets/signon.css
@@ -1,15 +1,15 @@
-.right {
+.login .right {
 	margin-left:20px;
 	float:right;
 	width:440px;
 }
 
-input {
+.login input {
 	float:right;
 	margin-bottom:25px;
 }
 
-p
+.login p
 {
 	padding:25px 10px 0px 10px;
 }
