Implemented the UI for the contexual menu popup. The callout does not disappear the moment you leave the event div

--- a/trailr/app/views/trails/_timeline.html.erb
+++ b/trailr/app/views/trails/_timeline.html.erb
@@ -34,12 +34,18 @@
 	<div class="back">Back</div>
 
 	<div class="meta">
+		<!--
 		<div class="headline">
 			&nbsp;
 		</div>
 		<div class="source">
 			&nbsp;
 		</div>
+		-->
+		<ul>
+			<li><a href="#">Show timelines containing this link</a></li>
+			<li><a href="#">Start new timeline from here</a></li>
+		</ul>
 	</div>
 	<div class="meta_callout">&nbsp;</div>
 	
