--- a/trailr/public/stylesheets/timeline.css
+++ b/trailr/public/stylesheets/timeline.css
@@ -64,6 +64,20 @@
 	
 }
 
+#timeline .gap {
+	background-color:#F5F5F5;
+	/*background-color:red;*/
+	height:13px;
+	width:11px;
+	position:absolute;
+	bottom:100px;
+	z-index:1;
+	
+	border-left:2px solid black;
+	border-right:2px solid black;
+	
+}
+
 #timeline .event {
 	text-align:center;
 	position:absolute;
